<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ovi"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    tools:context="com.example.ovi.dialerview.MainActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="13dp"
        android:background="@color/red"
        android:textSize="40sp" />

    <Button
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button_circle"
        android:backgroundTint="@color/orange"
        android:text="@string/Contact" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/contact"
        android:layout_centerHorizontal="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/one"
                android:text="@string/one"
                style="@style/MyButtonStyle"/>

            <Button
                android:id="@+id/two"
                style="@style/MyButtonStyle"
                android:text="@string/two" />

            <Button
                android:id="@+id/three"
                style="@style/MyButtonStyle"
                android:text="@string/three" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/four"
                style="@style/MyButtonStyle"
                android:text="@string/four"/>

            <Button
                android:id="@+id/five"
                android:text="@string/five"
                style="@style/MyButtonStyle"/>

            <Button
                android:id="@+id/six"
                android:text="@string/six"
                style="@style/MyButtonStyle" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seven"
                style="@style/MyButtonStyle"
                android:text="@string/seven"/>

            <Button
                android:id="@+id/eight"
                style="@style/MyButtonStyle"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nine"
                style="@style/MyButtonStyle"
                android:text="@string/nine"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/star"
                style="@style/MyButtonStyle"
                android:text="@string/star"/>

            <Button
                android:id="@+id/zero"
                style="@style/MyButtonStyle"
                android:text="@string/zero"/>

            <Button
                android:id="@+id/hash"
                style="@style/MyButtonStyle"
                android:text="@string/hash"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:id="@+id/call"
                android:text="@string/Call"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:id="@+id/callEnd"
                android:text="@string/CutCall"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
